Fix overlaping |Stick Score and Time to outer div

--- a/Snakie_Game/styles.css
+++ b/Snakie_Game/styles.css
@@ -19,7 +19,7 @@ html {
 }
 
 * {
-    margin: 0px; 
+    margin: 0px;
     padding: 0px;
 }
 
@@ -66,12 +66,12 @@ body {
     height: var(--Bsnake-height);
     position: relative;
     border-radius: 5px;
-    top: -20px;
+    top: 20px;
     left: 0px;
 }
 
 .imf {
-    position: absolute;
+    position: sticky;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,8 +85,7 @@ body {
 }
 
 #score {
-    
-    right: 0px;
+    float: right;
 }
 
 #level {
@@ -97,6 +96,7 @@ body {
 }
 
 #time {
+    float: left;
     padding: 0px 5px 0 5px;
     min-width: 150px;
 }
@@ -123,7 +123,7 @@ select {
     background-color: rgb(39, 26, 26);
 }
 
-#gameover h1{
+#gameover h1 {
     text-align: center;
     font-size: 40px;
     margin-top: 90px;
@@ -156,6 +156,7 @@ button {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .touch_controls div {
     border: 2px solid rgb(100, 21, 61);
     color: rgb(177, 223, 13);
@@ -165,18 +166,22 @@ button {
     font-size: 50px;
     opacity: 0.6;
 }
+
 .touch_controls .move_up {
     grid-column: 2;
     grid-row: 1;
 }
+
 .touch_controls .move_down {
     grid-column: 2;
     grid-row: 3;
 }
+
 .touch_controls .move_left {
     grid-column: 1;
     grid-row: 2;
 }
+
 .touch_controls .move_right {
     grid-column: 3;
     grid-row: 2;
